--- a/Plotting/Plot.cabal
+++ b/Plotting/Plot.cabal
@@ -23,4 +23,5 @@ executable Plot
                , diagrams-lib >= 1.3
                , diagrams-svg >= 1.3
                , diagrams-contrib >= 1.3
+               , shake
   default-language:    Haskell2010
