--- a/Plotting/Plot.cabal
+++ b/Plotting/Plot.cabal
@@ -22,6 +22,8 @@ executable Plot
   build-depends: base >=4.7 && <4.8
                , diagrams-lib >= 1.3
                , diagrams-svg >= 1.3
+               , diagrams-pgf
                , diagrams-contrib >= 1.3
                , shake
+               , containers
   default-language:    Haskell2010
