--- a/Plotting/Plot.cabal
+++ b/Plotting/Plot.cabal
@@ -22,7 +22,7 @@ executable Plot
   build-depends: base >=4.7 && <4.9
                , diagrams-lib >= 1.3
                , diagrams-svg >= 1.3
-               , diagrams-pgf
+               , diagrams-pgf >= 0.1
                , diagrams-contrib >= 1.3
                , containers
   default-language:    Haskell2010
