Added drawing of statistics graph, added results appendix with plots

--- a/Plotting/Plot.cabal
+++ b/Plotting/Plot.cabal
@@ -25,4 +25,5 @@ executable Plot
                , diagrams-contrib >= 1.3
                , containers
                , filepath
+               , parsec
   default-language:    Haskell2010
