--- a/Plotting/Plot.cabal
+++ b/Plotting/Plot.cabal
@@ -19,6 +19,7 @@ executable Plot
   main-is: Main.hs
   default-extensions: FlexibleContexts
                     , NoMonomorphismRestriction
+                    , TypeFamilies
   build-depends: base >=4.7 && <4.9
                , diagrams-lib >= 1.3
                , diagrams-pgf >= 0.1
